Corrects the overflow of the tips box

--- a/client/app/styles/buildingSelector.scss
+++ b/client/app/styles/buildingSelector.scss
@@ -8,7 +8,7 @@
   margin-top: 30px;
   height: 25%;
   box-shadow: 0 0 50px #CCCCCC;
-  width:100%;
+  //width:100%;
 }
 
 #building-scroll {
@@ -18,7 +18,8 @@
 
 #graph-panel {
   margin-top: 30px;
-  height: 80%;
+  //height: 50%;
+  //width: 30%;
 }
 #graph-alignment {
   width:100%;
